tests/samples/negative/pointers/invalid_cast_pointer.ax
module invalid_cast_pointer;

fn main() -> i32 {
    var value: i32 = 1;
    let number: usize = cast<usize>(&value);
    return cast<i32>(number);
}
